all features functioning, scraping left

--- a/_test/webscraping_test.ipynb
+++ b/_test/webscraping_test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_2540\\2005817355.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_9956\\2005817355.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome('C:/Users/thoma/chromedriver/chromedriver.exe')\n"
      ]
     }
@@ -44,12 +44,17 @@
    "source": [
     "# create browser and launch website\n",
     "driver = webdriver.Chrome('C:/Users/thoma/chromedriver/chromedriver.exe')\n",
-    "driver.get('https://www.willhaben.at/iad/immobilien/immobilien/vorarlberg?rows=100')"
+    "driver.get('https://www.willhaben.at/iad/immobilien/immobilien/vorarlberg?rows=100')\n",
+    "\n",
+    "# remove privacy notice\n",
+    "privacy_deny = driver.find_element('xpath','//*[@id=\"didomi-notice-disagree-button\"]')\n",
+    "\n",
+    "privacy_deny.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,25 +73,41 @@
    "outputs": [],
    "source": [
     "# iterate through found elements\n",
+    "i = 0\n",
     "elements = driver.find_elements('css selector','.Box-sc-wfmb7k-0.ResultListAdRowLayout___StyledBox-sc-1rmys2w-0.ginNzk.dZyCtF')\n",
     "for elem in elements:\n",
+    "    i = i + 1\n",
     "    elem_html = elem.get_attribute('innerHTML')\n",
     "\n",
     "    elem_soup = bs.BeautifulSoup(elem_html, 'html.parser')\n",
-    "\n",
-    "    print(elem_soup.h3.text)"
+    "    print('\\n')\n",
+    "    print(i)\n",
+    "    print(re.search(pat_room, str(elem_soup)))\n",
+    "    print(re.search(pat_footage, str(elem_soup)))\n",
+    "    if i == 6 or i == 1:\n",
+    "        pass\n",
+    "        print(str(elem_soup))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove privacy notice\n",
-    "privacy_deny = driver.find_element('xpath','//*[@id=\"didomi-notice-disagree-button\"]')\n",
-    "\n",
-    "privacy_deny.click()"
+    "pat_room = re.compile(r'\\d+(?=<\\/span><span class=\\\"Text-sc-10o2fdq-0 iyzLep\\\"> (<!-- -->)?Zimmer)')\n",
+    "pat_footage = re.compile(r'\\d+(?=</span><span class=\\\"Text-sc-10o2fdq-0 iyzLep\\\"> (<!-- -->)?m²)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pat_room = re.compile(r'\\d+(?=<\\/span><span class=\\\"Text-sc-10o2fdq-0 iyzLep\\\"> Zimmer)')\n",
+    "pat_footage = re.compile(r'\\d+(?=<\\/span><span class=\\\"Text-sc-10o2fdq-0 iyzLep\\\"> m²)')"
    ]
   },
   {
