working scripts to scrape tables

--- a/_test/db_connector.ipynb
+++ b/_test/db_connector.ipynb
@@ -30,15 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3021798861.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [49]\u001b[1;36m\u001b[0m\n\u001b[1;33m    cur.execute a\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('\\n    INSERT INTO test_2 (num, data)\\n    VALUES (%(num)s, %(data)s);\\n    ', {'num': 10, 'data': 'yo'})\n"
      ]
     }
    ],
